--- a/FastSearchLibrary/FastSearchLibrary.csproj
+++ b/FastSearchLibrary/FastSearchLibrary.csproj
@@ -58,7 +58,7 @@
     <Compile Include="FileSearcher\FileSearcherBase.cs" />
     <Compile Include="FileSearcher\FileSearcherMultiple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchEventArgs.cs" />
+    <Compile Include="SearchCompletedEventArgs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
